--- a/audio-converter/package.json
+++ b/audio-converter/package.json
@@ -3,9 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "dotenv": "^6.0.0",
+    "express": "^4.16.3",
+    "express-react-views": "^0.10.5",
+    "multer": "^1.3.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "unirest": "^0.5.1",
+    "watson-developer-cloud": "^3.9.1",
+    "watson-react-components": "^0.6.17",
+    "watson-speech": "^0.35.0"
   },
   "scripts": {
     "start": "react-scripts start",
