--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,7 @@
     "multer": "^1.3.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-scripts": "1.1.5",
+    "react-scripts": "^2.0.0-next.3e165448",
     "unirest": "^0.5.1",
     "watson-developer-cloud": "^3.9.1",
     "watson-react-components": "^0.6.17",
@@ -21,5 +21,18 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "proxy": "http://localhost:3010/",
+  "browserslist": {
+    "development": [
+      "last 2 chrome versions",
+      "last 2 firefox versions",
+      "last 2 edge versions"
+    ],
+    "production": [
+      ">0.25%",
+      "not op_mini all",
+      "ie 11"
+    ]
   }
 }
