--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
+  "engines": {
+    "node": "10.8.0",
+    "npm": "6.2.0"
+  },
   "author": "",
   "license": "ISC",
   "description": "",
