--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
+  "heroku-postbuild": "cd client && npm && npm run build",
   "keywords": [
     "heroku"
   ],
